# Fractals

./: CMakeLists.txt  Complex.cpp  Complex.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
